Mengerjakan PERTEMUAN14_httpclient

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 /jfc-konkurensi/nbproject/private/
 /jfc_konkurensi/build/
 /jfc_konkurensi/nbproject/private/
+/jfc-httpclient/nbproject/private/
+/jfc-httpclient/build/
